--- a/package.json
+++ b/package.json
@@ -15,17 +15,29 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.1.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@igniteui/material-icons-extended": "^2.10.0",
+    "apexcharts": "^3.35.5",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^14.0.15",
+    "jszip": "^3.10.0",
+    "minireset.css": "~0.0.4",
+    "ng-apexcharts": "^1.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
+    "@igniteui/angular-schematics": "~14.0.1000",
+    "@types/d3-scale": "^4.0.2",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
