--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.0.0",
     "@igniteui/material-icons-extended": "^2.10.0",
     "apexcharts": "^3.35.5",
+    "bn-ng-idle": "^2.0.4",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^14.0.15",
     "jszip": "^3.10.0",
